# Interlinear

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
app/: config.py  db.py  device.py  main.py  worker.py
app/audio/: dsp.py  io.py
app/jobs/: schema.sql  store.py
app/models/: plan.py  timeline.py
app/pipeline/: asr.py  fetch.py  plan.py  preview.py  render_audio.py  runner.py  sbd.py  segment.py  translate.py  tts.py
app/web/templates/: _status.html  base.html  index.html  job.html
docs/: DEPLOY.md
docs/decisions/: 001-asr-not-video-model.md  002-words-are-the-source-of-truth.md  003-plan-render-split.md  004-llm-returns-indices.md  005-drop-ctranslate2.md  006-no-forced-alignment.md  007-local-llm-not-nmt.md  008-sampling-temperature.md  README.md
tests/: conftest.py  test_api.py  test_asr.py  test_jobs.py  test_plan.py  test_render.py  test_runner.py  test_segment.py  test_translate.py  test_tts.py
