[project]
name = "bilingual-audio-generator"
version = "0.1.0"
description = "Turn a video into bilingual audio: every sentence followed by its translation."
requires-python = ">=3.11"

# Core dependencies. Pure-CPU stages (models, dsp, plan, render) need only these,
# which keeps them importable and testable on a dev machine without CUDA.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "numpy>=1.26",
    "soundfile>=0.12",
]

[project.optional-dependencies]
# GPU stages. These pull torch and only install cleanly on the deployment box.
# See docs/DEPLOY.md — CTranslate2 needs a source build on aarch64.
gpu = [
    "faster-whisper>=1.0",
    "whisperx>=3.3",
    "wtpsplit>=2.1",
    "kokoro>=0.9",
]
web = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "yt-dlp>=2024.1",
    "httpx>=0.27",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Tests that need a GPU or the network are opt-in.
markers = [
    "gpu: requires CUDA and the GPU model stack",
    "network: requires network access (yt-dlp)",
]
addopts = "-m 'not gpu and not network'"

[tool.ruff]
line-length = 100
target-version = "py311"
